Refactor Cors Configuration